--- a/ProyectoTaller2/nbproject/project.properties
+++ b/ProyectoTaller2/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/ProyectoTaller2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.ojdbc6.jar=C:\\oraclexe\\app\\oracle\\product\\11.2.0\\server\\lib\\ojdbc6.jar
+file.reference.ojdbc8.jar=C:\\Users\\Veronica Gomez\\Downloads\\sqldeveloper\\jdbc\\lib\\ojdbc8.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}
+    ${file.reference.ojdbc6.jar}:\
+    ${file.reference.ojdbc8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
