--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /ProyectoTaller2/nbproject/private/
 /ProyectoTaller2/build/
-/ProyectoTaller2/src/Services/ConnectionService.java/
+/ProyectoTaller2/src/Services/ConnectionService/
 
