--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /ProyectoTaller2/nbproject/private/
 /ProyectoTaller2/build/
-/ProyectoTaller2/src/Services/ConnectionService/
+/ProyectoTaller2/src/Services/ConnectionService.java/
 
 /ProyectoTaller2/dist/
