--- a/ProyectoTaller2/nbproject/project.properties
+++ b/ProyectoTaller2/nbproject/project.properties
@@ -30,12 +30,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.ojdbc6.jar=C:\\oraclexe\\app\\oracle\\product\\11.2.0\\server\\lib\\ojdbc6.jar
-file.reference.ojdbc6.jar-1=C:\\Users\\DANIEL\\Downloads\\ojdbc6.jar
 includes=**
 jar.compress=true
 javac.classpath=\
-    ${file.reference.ojdbc6.jar}:\
-    ${file.reference.ojdbc6.jar-1}
+    ${file.reference.ojdbc6.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
